--- a/style.css
+++ b/style.css
@@ -14,44 +14,20 @@ p 	{color: green;
 
 	
 		
-	<style>
-		h2 {text-align: center;}
-		u {text-decoration: underline;}
-	</style>
+	
+h2 {text-align: center;}
+u {text-decoration: underline;}
+	
 		
 	
-	<style>
-		p {color: green;
-			font-family: tahoma;}
-	</style>
 	
-		<p>A person I admire deeply in my life is my grandma. I admire her because she's a strong hardworking woman. She does a lot in her life
-		and never manages to give up no matter what challenge hits her in life.</p>
-		
-		<p> </p>
-			<a href="">Grandma</a>
-			
-	<!--Link doesn't open--!>
-	
-	<h2>Favorite fruits</h2>
-		
-		<ul>
-			<li><i> Strawberries</i></li>
-			<li>Mango</li>
-			<li>Blackberries</li>
-			<li>Pomegranate</li>
-			<li>Bananas</li>
-		</ul>
-		
-	<h2>Favorite presidents</h2>
-	
-		<ol>
-			<li>Barack Obama</li>
-			<li>Bill Clinton</li>
-			<li>Abraham Lincoln</li>
-			<li>John F. Kennedy</li>
-			<li>Theodore Roosevelt</li>
-		</ol>
+p {color: green;
+font-family: tahoma;}
+
+ul {font-style: italic;}
+
+ol {font-style: oblique;
+	font-size: 1.6em; }
 		
 	</body>
 	
