--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ h1 {text-align: center;
 	
 h2 {text-align: center;
 	font-style: italic;}
+<style>
 u {text-decoration: underline;}
+</style>
 	
 	
 	
