--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@ h1 {text-align: center;
 	color: red;}
 
 	
-h2 {text-align: center;
-	text-decoration: underline;}
-
+h2 {text-align: center;}
 u {text-decoration: underline;}
 
 	
@@ -28,7 +26,7 @@ font-family: tahoma;}
 
 ul {font-style: italic;}
 
-ol {font-style: oblique;
+ol {font-style: bold;
 	font-size: 1.6em; }
 		
 	</body>
